# kalgebra

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Mainpage.dox  Messages.sh  TODO  config-kalgebra.h.cmake  config.h.cmake  kalgebra.appdata.xml  kalgebra.kdev4  org.kde.kalgebra.appdata.xml  snapcraft.yaml
analitza/: CMakeLists.txt  abstractexpressiontransformer.cpp  abstractexpressiontransformer.h  abstractlexer.cpp  abstractlexer.h  analitza.cpp  analitza.h  analitzaexport.h  analitzautils.cpp  analitzautils.h  analyzer.cpp  analyzer.h  apply.cpp  apply.h  builtinmethods.cpp  builtinmethods.h  container.cpp  container.h  customobject.cpp  customobject.h  exp.cpp  exp.g  exp.h  explexer.cpp  explexer.h  expression.cpp  expression.h  expressionparser.cpp  expressionparser.h  expressiontable.cpp  expressiontable_p.h  expressiontype.cpp  expressiontype.h  expressiontypechecker.cpp  expressiontypechecker.h  expressionwriter.cpp  expressionwriter.h  expressionwritter.cpp  expressionwritter.h  htmlexpressionwriter.cpp  (+39 more)
analitza/tests/: CMakeLists.txt  analitzatest.cpp  analitzatest.h  builtintest.cpp  builtintest.h  expressiontest.cpp  expressiontest.h  exptest.cpp  exptest.h  matchingtest.cpp  matchingtest.h  mathmlpresentationlexertest.cpp  mathmlpresentationlexertest.h  mathmlpresentationtest.cpp  mathmlpresentationtest.h  typechecktest.cpp  typechecktest.h
analitzagui/: CMakeLists.txt  algebrahighlighter.cpp  algebrahighlighter.h  analitzaguiexport.h  expressionedit.cpp  expressionedit.h  function.cpp  function.h  functioncartesian.cpp  functionedit.cpp  functionedit.h  functionfactory.cpp  functionfactory.h  functionimpl.cpp  functionimpl.h  functionimplicit.cpp  functionparametric.cpp  functionpolar.cpp  functionsmodel.cpp  functionsmodel.h  functionspainter.cpp  functionspainter.h  functionsview.cpp  functionsview.h  functionutils.cpp  functionutils.h  graph2d.cpp  graph2d.h  operatorsmodel.cpp  operatorsmodel.h  variablesmodel.cpp  variablesmodel.h
analitzagui/tests/: CMakeLists.txt  functiontest.cpp  functiontest.h  operatorsmodeltest.cpp  operatorsmodeltest.h
calgebra/: CMakeLists.txt  main.cpp  test_calgebra.py
mobile/: CMakeLists.txt  Messages.sh  analitzawrapper.cpp  analitzawrapper.h  clipboard.cpp  clipboard.h  console.cpp  console.h  functionsdialog.cpp  functionsdialog.h  graph2dmobile.cpp  graph2dmobile.h  header.qrc  kalgebramobile.cpp  kalgebramobile.desktop  kalgebramobile.h  kalgebramobileharmattan.desktop  kalgebrascript.desktop  main.cpp  org.kde.kalgebramobile.appdata.xml  org.kde.kalgebramobile.desktop  plot2d.js  pluginsmodel.cpp  pluginsmodel.h  resources.qrc  uiconfig.cpp  uiconfig.h  widgetswrappers.cpp  widgetswrappers.h
mobile/content/ui/: About.qml  Console.qml  Dictionary.qml  KAlgebraPage.qml  Plot2D.qml  Plot3D.qml  TableResultPage.qml  Tables.qml  VariablesView.qml  main.qml
mobile/content/ui/controls/: Add2DDialog.qml  Add3DDialog.qml  AddButton.qml  AddPlotDialog.qml  ExpressionInput.qml
mobile/declarative/: CMakeLists.txt  analitzadeclarativeplugin.cpp  analitzadeclarativeplugin.h  analitzawrapper.cpp  analitzawrapper.h  graph2dmobile.cpp  graph2dmobile.h  qmldir
mobile/declarative/qml/: Graph2D.qml
mobile/plugins/: About.qml  CMakeLists.txt  Console.qml  Dictionary.qml  Graph2D.qml  Plot2D.qml  Plot3D.qml  Tables.qml  VariablesView.qml  kalgebraabout.desktop  kalgebraabout.json  kalgebraconsole.desktop  kalgebraconsole.json  kalgebradictionary.json  kalgebraplot2d.desktop  kalgebraplot2d.json  kalgebraplot3d.json  kalgebratables.desktop  kalgebratables.json  kalgebravariables.desktop  kalgebravariables.json
mobile/plugins/widgets/: Button.qml  CMakeLists.txt  CalcButton.qml  ConsoleModel.qml  ExpressionInput.qml  KAlgebraMobile.qml  Keyboard.qml  RealInput.qml  qmldir
mobile/plugins/widgets/desktop/: Button.qml  CMakeLists.txt  CalcButton.qml  ConsoleDelegate.qml  ExpressionInput.qml  KAlgebraMobile.qml  KAlgebraPage.qml  Keyboard.qml  Label.qml  ToolTip.qml  (+1 more)
mobile/scripts/: CMakeLists.txt
mobile/scripts/console/: CMakeLists.txt  console.js  kalgebraconsole.desktop
mobile/scripts/plot2d/: CMakeLists.txt  kalgebraplot2d.desktop  plot2d.js
mobile/scripts/tables/: CMakeLists.txt  kalgebratables.desktop  tables.js
mobile/scripts/variables/: CMakeLists.txt  kalgebravariables.desktop  variables.js
plasmoid/: CMakeLists.txt  Messages.sh  expressionedit.cpp  expressionedit.h  kalgebraplasma.cpp  kalgebraplasma.h  kalgebraplasmoid.desktop
plasmoids/calculator/: CMakeLists.txt  Messages.sh  kalgebraplasma.cpp  kalgebraplasma.h  kalgebraplasmoid.desktop
src/: CMakeLists.txt  Messages.sh  algebra.cpp  algebra.h  algebrahighlighter.cpp  algebrahighlighter.h  analitza.cpp  analitza.h  askname.h  console.cpp  console.h  consolehtml.cpp  consolehtml.h  consolemodel.cpp  consolemodel.h  container.cpp  container.h  dictionary.cpp  dictionary.h  exp.cpp  exp.h  expression.cpp  expression.h  expressionedit.cpp  expressionedit.h  function.cpp  function.h  functioncartesian.cpp  functionedit.cpp  functionedit.h  functionfactory.cpp  functionfactory.h  functionimpl.cpp  functionimpl.h  functionimplicit.cpp  functionparametric.cpp  functionpolar.cpp  functionsmodel.cpp  functionsmodel.h  functionsview.cpp  (+34 more)
src/analitza/: analitza.cpp  analitza.h  analitzaexport.h  container.cpp  container.h  exp.cpp  exp.h  expression.cpp  expression.h  object.cpp  object.h  operations.cpp  operations.h  operator.cpp  operator.h  value.cpp  value.h  variables.cpp  variables.h
src/calgebra/: CMakeLists.txt  main.cpp
src/content/ui/: About.qml  Console.qml  Dictionary.qml  Plot2D.qml  Plot3D.qml  TableResultPage.qml  Tables.qml  VariablesView.qml  main.qml
src/plasmoid/: CMakeLists.txt  kalgebraplasma.cpp  kalgebraplasmoid.desktop
src/qtmmlwidget/: qtmmlwidget.cpp  qtmmlwidget.h
src/tests/: CMakeLists.txt  analitzatest.cpp  analitzatest.h  expressiontest.cpp  expressiontest.h  exptest.cpp  exptest.h  functiontest.cpp  functiontest.h  operatorsmodeltest.cpp  operatorsmodeltest.h
(+220 files in other folders)
